# snorlax

./: #current.org#  #name-brainstorm.org#  #todo.org#  .credentials.example  .env  .env.development  .env.example  .env.production  .gitignore  .npmrc  .vercelignore  README.md  auth-payments-verification.md  auto-update-verification.md  beta-install-guide.md  blocking-upgrade.md  build-guide.md  chrome-fix.md  comp-accounts.md  current.org  deploy-guide.md  dev-app-update.yml  electron-builder.yml  eslint.config.mjs  extension-hosting.md  extension-next-steps.md  issues.md  limitation.md  oauth-setup.md  oauth-verification.md  package.json  payments-arch.md  payments-todo.md  pnpm-lock.yaml  pnpm-workspace.yaml  quic-upgrade.md  snorlax-architecture.md  todo.org  tsconfig.base.json  tsconfig.json  (+1 more)
.claude/: settings.local.json
.github/workflows/: release-desktop.yml
apps/desktop/: electron.vite.config.ts  package.json  tailwind.config.js  tsconfig.json
apps/desktop/src/main/: appDiscovery.ts  config.ts  deepLink.ts  env.d.ts  index.ts  logging.ts  tray.ts  updater.ts  updaterPolicy.ts  window.ts
apps/desktop/src/preload/: index.ts
apps/desktop/src/renderer/: App.tsx  global.d.ts  index.html  main.tsx
apps/desktop/src/shared/: appPicker.ts  productLimits.ts
apps/extension/: README.md  STORE_SUBMISSION.md  manifest.json  package.json
apps/extension/safari/: README.md  SafariExtension.entitlements  SafariWebExtensionHandler.swift
apps/extension/src/: background.js  blocked.css  blocked.html  popup-view.js  popup.css  popup.html  popup.js  rules.js
apps/web/: .credentials.example  .prettierignore  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  saas-starter.md  sentry.client.config.ts  sentry.server.config.ts  tsconfig.json  usage-guide.md  vitest.config.ts  vitest.integration.config.ts
apps/web/content/blog/: hello-world.md
apps/web/content/legal/: browser-extension-privacy.md  edge-extension-privacy.md  privacy.md  terms.md
apps/web/emails/: PaymentFailedEmail.tsx  RefundIssuedEmail.tsx  SubscriptionCancelledEmail.tsx  WelcomeEmail.tsx
apps/web/prompts/: app.org  marketing.org  prompt.org
apps/web/scripts/: comp-environment.ts  comp.ts  stripe-test.ts
apps/web/src/: instrumentation.ts  middleware.ts
apps/web/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  manifest.ts  not-found.tsx  providers.tsx  robots.ts  sitemap.ts
apps/web/src/components/: DevBadge.tsx
apps/web/src/lib/: config.ts
apps/web/supabase/: config.toml  seed.sql
apps/web/supabase/migrations/: 0001_init.sql  0002_connections.sql  0003_stripe_events.sql  0004_comp_grants.sql  0005_public_grants.sql
apps/web/supabase/snippets/: Untitled query 986.sql
apps/web/supabase/templates/: recovery.html
apps/web/tests/e2e/: auth.spec.ts  checkout.spec.ts  live-checkout-auth.spec.ts  marketing.spec.ts  redeem.spec.ts  webhook.spec.ts
apps/web/tests/integration/: stripe-webhook-cli.test.ts
apps/web/tests/unit/: auth-callback.test.ts  auth-recovery-route.test.ts  auth-recovery.test.ts  auth-redirects.test.ts  blog.test.ts  cipher.test.ts  comp-cli-environment.test.ts  comp-entitlement.test.ts  config.test.ts  desktop-download.test.ts  setup.ts  (+7 more)
assets/brand/: README.md  VALIDATION.txt
assets/brand/integration/: electron-builder.example.json
assets/brand/scripts/: generate_assets.py
assets/brand/source/: brand-tokens.json
config/: load.ts  package.json  schema.ts  tsconfig.json
native/common/: Cargo.toml  build.rs  extension-identities.json
native/common/src/: browsers.rs  lib.rs  watchdog.rs
native/linux/: Cargo.toml  README.md
native/linux/installer/: after-install.sh  after-remove.sh  before-remove.sh
native/linux/src/: constants.rs  core.rs  focus_cli.rs  ipc.rs  lib.rs  main.rs  pairing.rs  paths.rs  policy_match.rs  schedule.rs  secure_store.rs  service.rs  state.rs  usb.rs
native/linux/src/enforce/: apps.rs  browser_watchdog.rs  dns.rs  extension_policy.rs  mod.rs  nft.rs  resolve.rs
native/macos/: Cargo.toml  README.md
native/macos/src/: bundle.rs  constants.rs  core.rs  launchd.rs  lib.rs  main.rs  model.rs  paths.rs  policy_match.rs  run.rs  schedule.rs  secure_store.rs  service.rs  state.rs  usb.rs
native/macos/src/enforce/: apps.rs  browser_watchdog.rs  extension_policy.rs  hosts.rs  mod.rs  pf.rs  properties.rs  resolve.rs
native/protocol/: schema.json
native/windows/: Cargo.toml  README.md  build.rs
native/windows/examples/: resolvecheck.rs
native/windows/installer/: nsis-include.nsh
native/windows/src/: constants.rs  core.rs  ipc.rs  lib.rs  main.rs  model.rs  paths.rs  policy_match.rs  run.rs  schedule.rs  secure_store.rs  service.rs  usb.rs
native/windows/src/enforce/: apps.rs  browser_policy.rs  browser_watchdog.rs  divert.rs  dns.rs  extension_policy.rs  mod.rs  observations.rs  properties.rs  resolve.rs  sni.rs  wfp.rs
oauth/: README.md
scripts/: after-pack.mjs  after-sign.mjs  audit-extension.mjs  build-extension.mjs  build-native-linux.mjs  build-native-win.mjs  build-native.mjs  build.mjs  configure-release-bucket.mjs  configure-release-iam.mjs  dev.mjs  generate-brand-rasters.mjs  publish-apt-repo.mjs  release-both-from-linux.mjs  release-extension.mjs  release-local.mjs  release-win-from-linux.mjs  set-version.mjs  sync-env.ts  upload-release.mjs
scripts/lib/: desktop-environment.mjs  dev-processes.mjs  release-hosting.mjs
tests/: tsconfig.json
tests/electron/e2e/: README.md  focus-toggle.spec.ts
tests/electron/unit/: appDiscovery.test.ts  config.test.ts  deepLink.test.ts  extension-popup.test.ts  extension-rules.test.ts  localEntitlement.test.ts  mockService.test.ts  offlineEntitlement.test.ts  pairing.test.ts  policyNormalize.test.ts  productLimits.test.ts  propertyGroups.test.ts  scheduleEngine.test.ts  signUpResult.test.ts  updaterPolicy.test.ts
tests/fixtures/: policies.json  schedules.json
tests/helpers/: mockService.ts
tests/unit/: dev-processes.test.ts  release-hosting.test.ts
(+133 files in other folders)
