[package]
name = "talysman_common"
version = "0.1.0"
edition = "2021"
description = "OS-agnostic logic shared by every Talysman native backend (Windows/Linux/macOS)."
publish = false
build = "build.rs"

[lib]
name = "talysman_common"
path = "src/lib.rs"

[dependencies]

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
