[package]
name = "focuslock-linux"
version = "0.1.0"
edition = "2021"
description = "FocusLock privileged Linux service + installer + recovery killswitch."
publish = false

[lib]
name = "focuslock"
path = "src/lib.rs"

[[bin]]
name = "focuslock-svc"
path = "src/main.rs"

[[bin]]
name = "focuslock-svcctl"
path = "src/bin/svcctl.rs"

[[bin]]
name = "focuslock-recover"
path = "src/bin/recover.rs"

[[bin]]
name = "focuslock-natmsg"
path = "src/bin/natmsg.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hex = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sysinfo = "0.30"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "io-util", "io-std", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 2
lto = false
strip = true
