[package]
name = "focuslock"
version = "0.1.0"
edition = "2021"
description = "FocusLock privileged Windows service + installer + recovery killswitch."
publish = false

# Three binaries share one library crate (src/lib.rs):
#   focuslock-svc      — the privileged service (SCM entry; --console for dev)
#   focuslock-svcctl   — elevated install/configure/recover/remove CLI
#   focuslock-recover  — the killswitch
[lib]
name = "focuslock"
path = "src/lib.rs"

[[bin]]
name = "focuslock-svc"
path = "src/main.rs"

[[bin]]
name = "focuslock-svcctl"
path = "src/bin/svcctl.rs"

[[bin]]
name = "focuslock-recover"
path = "src/bin/recover.rs"

[dependencies]
anyhow = "1"
hex = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sysinfo = "0.30"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "io-util", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
windows-service = "0.7"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
]

[profile.release]
opt-level = 2
lto = false
strip = true
