[package]
name = "focuslock"
version = "0.1.0"
edition = "2021"
description = "FocusLock privileged Windows service + installer + recovery killswitch."
publish = false

# Three binaries share one library crate (src/lib.rs):
#   focuslock-svc      — the privileged service (SCM entry; --console for dev)
#   focuslock-svcctl   — elevated install/configure/recover/remove CLI
#   focuslock-recover  — the killswitch
[lib]
name = "focuslock"
path = "src/lib.rs"

[[bin]]
name = "focuslock-svc"
path = "src/main.rs"

[[bin]]
name = "focuslock-svcctl"
path = "src/bin/svcctl.rs"

[[bin]]
name = "focuslock-recover"
path = "src/bin/recover.rs"

[[bin]]
name = "focuslock-natmsg"
path = "src/bin/natmsg.rs"

[dependencies]
anyhow = "1"
hex = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sysinfo = "0.30"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "io-util", "io-std", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
windows-service = "0.7"

# Raw WinDivert bindings for the packet engine (enforce::divert). The build links WinDivert.lib
# via the WINDIVERT_PATH env var (set to native/windows/vendor/windivert); the matching
# WinDivert.dll + WinDivert64.sys are shipped next to focuslock-svc.exe.
windivert-sys = "0.10"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
]

# windivert-sys 0.10 links windows 0.48, so its WinDivertOpen/Recv/Send signatures use that
# version's HANDLE/BOOL — distinct types from our 0.58 above. Pull 0.48 in under an alias purely
# to name those FFI types in enforce::divert; everything else uses 0.58.
[dependencies.windivert_win]
package = "windows"
version = "0.48"
features = ["Win32_Foundation"]

[profile.release]
opt-level = 2
lto = false
strip = true
